@@ -1,3 +1,8 @@
+2007-04-08 Borut Razem <borut.razem AT siol.net>
+
+	* index.php: replaced "freeware" with "Free Open Source Software",
+	  announce "officially supported" platforms, ...
+
 2007-03-31 Borut Razem <borut.razem AT siol.net>
 
 	* cygwin_help.html, flatmode.txt, sdcc-install-nt.html, sdcc.gif,
